src/main/default/objects/Extentia_SIM__Test_Obj__c/Extentia_SIM__Test_Obj__c.object-meta.xml
<CustomObject>
    <label>Test Obj</label>
    <nameField>
        <label>Test Obj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Objs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>