src/main/default/objects/Extentia_SIM__Test_Obj__c/fields/Extentia_SIM__Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>