src/main/default/objects/Extentia_SIM__Test_Obj__c/fields/Extentia_SIM__State__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__State__c</fullName>
    <label>State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>