src/main/default/objects/Extentia_SIM__Test_Obj__c/fields/Extentia_SIM__Street__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__Street__c</fullName>
    <label>Street</label>
    <length>200</length>
    <type>Text</type>
</CustomField>