src/main/default/objects/Extentia_SIM__Test_Obj__c/listViews/Extentia_SIM__All.listView-meta.xml
<ListView>
    <fullName>Extentia_SIM__All</fullName>
    <columns>NAME</columns>
    <columns>Extentia_SIM__City__c</columns>
    <columns>Extentia_SIM__Country__c</columns>
    <columns>Extentia_SIM__Postal_Code__c</columns>
    <columns>Extentia_SIM__Street__c</columns>
    <columns>Extentia_SIM__State__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>